--- a/sass/style.scss
+++ b/sass/style.scss
@@ -46,7 +46,7 @@ main {
     @extend %wrapp;
 
     .home_area {
-        margin                                        : 100px 100px 90px 100px;
+        margin                                        : 100px 100px 200px 100px;
 
         @media (max-width: 1199.98px) {
             margin-left                               : 50px;
@@ -295,6 +295,9 @@ main {
 
 //footer
 footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     height                                            : 138px;
     background-color                                  : #669999;
 
